CustomObjects/objects/invoiceit_s__Product_Rate_Plan_Charge__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>This forms tier 3 of the product catalog.</description>
    <fields>
        <fullName>invoiceit_s__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_Code__c</fullName>
        <description>This field is used for Minimum customer spent</description>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_Sequence_Number__c</fullName>
        <label>Charge Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cost_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit Cost Price</description>
        <inlineHelpText>Unit Cost Price</inlineHelpText>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Default_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exempted_From_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete_Exempted From VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is checked for a specific charge all the parameters of the charge should be editable</description>
        <label>Is Price Editable In Quote/Order Wizards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Percentage_of_other_Charges__c</fullName>
        <description>Use this in conjunction with &quot;Percentage Pricing&quot; in the pricing model. You can typically use this for charges that are a percentage of other charges. 
e.g., Maintenance Charges could be 25% of the License charges.</description>
        <inlineHelpText>Use this in conjunction with &quot;Percentage Pricing&quot; in the pricing model. You can typically use this for charges that are a percentage of other charges. 
e.g., Maintenance Charges could be 25% of the License charges.</inlineHelpText>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Format__c</fullName>
        <description>This will specify whether price is default or tiered</description>
        <inlineHelpText>Please refer to the user documentation for detailed information on what the different pricing models mean.
Search for &quot;Pricing Model&quot; in the documentation.</inlineHelpText>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee Pricing</fullName>
                </value>
                <value>
                    <fullName>Percentage Pricing</fullName>
                </value>
                <value>
                    <fullName>Per Unit Pricing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tiered Pricing</fullName>
                </value>
                <value>
                    <fullName>Volume Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Type__c</fullName>
        <description>This will specify whether price is onetime, weekly, monthly etc or usage(metered) based.</description>
        <label>Price Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different Tax or VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different Tax or VAT percentages for different categories.</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan__c</fullName>
        <label>Product Rate Plan</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge</relationshipLabel>
        <relationshipName>ProductRatePlanCharge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recurring_Period__c</fullName>
        <label>Obsolete_Recurring Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>invoiceit_s__Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Of_Measurement__c</fullName>
        <inlineHelpText>Unit Of Measurement
(Unit, kilo, tonne etc)</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Price__c</fullName>
        <description>Unit Selling Price</description>
        <inlineHelpText>Unit Selling Price</inlineHelpText>
        <label>Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Uplift_Frequency__c</fullName>
        <inlineHelpText>Use this to indicate what would be your Uplift Frequency. So a frequency of Annual with 2% as uplift would increase the unit price by 2% every year for the duration of the Contract.</inlineHelpText>
        <label>Uplift Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Rate Plan Charge</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__CurrencyL__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>